Avoid horizontal scroll in post due to images

--- a/src/assets/css/clean-app.css
+++ b/src/assets/css/clean-app.css
@@ -72,6 +72,10 @@ blockquote {
   text-shadow: none;
 }
 
+img {  
+  max-width: 100%;
+}
+
 img::-moz-selection {
   color: #fff;
   background: transparent;
